Fix regression: z-index making video unclickable when nested

--- a/src/components/Video/Video.scss
+++ b/src/components/Video/Video.scss
@@ -15,7 +15,7 @@
 }
 
 .video {
-  z-index: -2;
+  z-index: 1;
   cursor: pointer;
 }
 
